# server

libs/: CMakeLists.txt
libs/adc/: CMakeLists.txt
libs/adc/includes/: adc.h  adc_hal.h  adc_module.h
libs/aoad/: CMakeLists.txt
libs/aoad/includes/: aoad.h  aoad_hal.h  aoad_module.h
libs/app_entry/: CMakeLists.txt
libs/button_support/: CMakeLists.txt
libs/button_support/includes/: button_support.h
libs/dma/: CMakeLists.txt
libs/dma/includes/: dma.h
libs/em_core/: CMakeLists.txt
libs/em_core/includes/: stack_monitor.h
libs/em_hw_api/: CMakeLists.txt
libs/em_hw_api/includes/: boot.h  common.h  config.h  driver.h  fifo.h  irq.h  irq_user_isr.h  mem_utils.h  system.h  system_memory.h
libs/em_hw_api/tests/test_common_hw_crc32/: signals.h  tasks.h
libs/em_system/: CMakeLists.txt
libs/em_system/includes/: em_system.h  em_system_cmd_nvm.h  em_system_cmd_rom.h  em_transport_manager.h
libs/em_system_stack/: CMakeLists.txt
libs/em_system_stack/includes/: em_system_stack.h
libs/emb_vs/emdt/profile/client/: CMakeLists.txt
libs/emb_vs/emdt/profile/server/: CMakeLists.txt
libs/emb_vs/emdt/service/: CMakeLists.txt
libs/emb_vs/fwu/service/: CMakeLists.txt
libs/firmware_header/: CMakeLists.txt
libs/firmware_header/includes/: firmware_header.h  firmware_header_symbol.h  header_access.h
libs/firmware_update_core/: CMakeLists.txt
libs/firmware_update_core/includes/: fwu_cmd.h  fwu_error_code.h
libs/firmware_update_core/tests/test_firmware_update_core/: test_bootloader_ctr_aes0_ecdsa0.h
libs/firmware_update_crypto/: CMakeLists.txt
libs/firmware_update_crypto/includes/: fwu_crypto.h
libs/firmware_update_crypto/tests/test_fwu_crypto_01/: fwu_crypto_utils.h  test_fw_16_bytes_ecb_aes0_ecdsa0.h  test_fw_16_bytes_ecb_aes0_ecdsa0_manualy_modified.h  test_fw_2048_bytes_cbc_aes0_ecdsa0.h  test_fw_2048_bytes_ctr_aes0_ecdsa0.h  test_fw_2048_bytes_ecb_aes0_ecdsa0.h
libs/firmware_update_spi/: CMakeLists.txt
libs/firmware_update_spi/includes/: emsfwu_cmd.h
libs/gpio/: CMakeLists.txt
libs/gpio/includes/: gpio.h  gpio_memory.h  gpio_module.h
libs/i2c/: CMakeLists.txt
libs/i2c/includes/: i2c.h  i2c_hal.h  i2c_module.h
libs/i2s/: CMakeLists.txt
libs/i2s/includes/: i2s.h  i2s_hal.h  i2s_module.h
libs/led_support/: CMakeLists.txt
libs/led_support/includes/: led_support.h
libs/memory_manager/: CMakeLists.txt
libs/memory_manager/includes/: memory_manager.h
libs/nvm/: CMakeLists.txt
libs/nvm/includes/: nvm.h
libs/nvm_bootloader/: CMakeLists.txt  nvm_bootloader_base_di03.elf  nvm_bootloader_base_di04.elf  nvm_bootloader_base_di05.elf
libs/nvm_bootloader/includes/: nvm_bootloader.h  nvmbl_header_access.h
libs/nvm_entry/: CMakeLists.txt
libs/nvm_entry/includes/: nvm_entry.h
libs/nvm_info/: CMakeLists.txt
libs/nvm_info/includes/: nvm_info.h
libs/nvm_operation_scheduler/: CMakeLists.txt
libs/nvm_operation_scheduler/includes/: nvm_op_sched.h
libs/pml/: CMakeLists.txt
libs/pml/includes/: pml.h  pml_memory.h  pml_power.h  pml_volt_monitor.h  pml_volt_monitor_memory.h
libs/prot_timer/: CMakeLists.txt
libs/prot_timer/includes/: prot_timer.h  prot_timer_memory.h
libs/qdec/: CMakeLists.txt
libs/qdec/includes/: qdec.h  qdec_hal.h  qdec_module.h
libs/qdec/tests/test_qdec_emsas/: qdec_emsas_cmd.h  signals.h  task.h
libs/radio/: CMakeLists.txt
libs/radio/includes/: radio.h  radio_config.h  radio_memory.h
libs/rc_calib/: CMakeLists.txt
libs/rc_calib/includes/: rc_calib.h
libs/rtc/: CMakeLists.txt
libs/rtc/includes/: rtc.h  rtc_module.h
libs/rtc/tests/test_rtc_emsas/: rtc_emsas_cmd.h  signals.h  task.h
libs/security/: CMakeLists.txt
libs/security/includes/: AES.h  AES_CBC.h  AES_CCM.h  AES_CMAC.h  AES_CTR.h  AES_ECB.h  AES_GCM.h  ECCSchnoor.h  ECCStatus.h  ECCTypedef.h  ECCVerifyPubKey.h  ECCkeyManagement.h  ECDH.h  ECDSA_Verify.h  ExampleECCUtilities.h  PRNG.h  PRNG_NIST_SP_800_90A.h  SHA1.h  SHA224.h  SHA256.h  SHA384.h  SHA512.h  hw_aes.h  rng.h
libs/sleep_manager/: CMakeLists.txt
libs/sleep_manager/includes/: sleep_manager.h
libs/sleep_timer/: CMakeLists.txt
libs/sleep_timer/includes/: sleep_timer.h
libs/spi_master/: CMakeLists.txt
libs/spi_master/includes/: spi_master.h  spi_master_hal.h  spi_master_module.h
libs/spi_slave/: CMakeLists.txt
libs/spi_slave/includes/: spi_slave.h  spi_slave_memory.h
libs/temperature_indicator/: CMakeLists.txt
libs/temperature_indicator/includes/: temperature_indicator.h  temperature_indicator_module.h
libs/transport/: CMakeLists.txt
libs/transport/includes/: transport.h
libs/uart/: CMakeLists.txt
libs/uart/includes/: uart.h  uart_memory.h
libs/unitimer/: CMakeLists.txt
libs/unitimer/includes/: timer.h  timer_hal.h
libs/usb/core/: CMakeLists.txt
libs/usb/core/api/: api_api_nb.h  api_oal_os.h  api_usbd.h  api_usbd_cdcacm.h  api_usbd_cdcacm_nb.h  api_usbd_hid.h  api_usbd_hid_generic.h  api_usbd_hid_generic_nb.h  api_usbd_hid_kbd.h  api_usbd_hid_kbd_nb.h  api_usbd_hid_mouse.h  api_usbd_hid_mouse_nb.h
libs/usb/core/api_nb/: api_nb.h  api_nb_oal_mutex.h
libs/usb/core/config/: config_api_nb.h  config_oal.h  config_oal_os.h  config_sync.h  config_usbd.h  config_usbd_cdcacm.h  config_usbd_config.h  config_usbd_hid.h  config_usbd_hid_generic.h  config_usbd_hid_kbd.h  config_usbd_hid_mouse.h  config_usbd_synopsys_otg.h
libs/usb/core/hcc_server/: hcc_server.h
libs/usb/core/oal/: oal_common.h  oal_event.h  oal_isr.h  oal_mutex.h  oal_task.h
libs/usb/core/transport/: usb_cdcacm.h
libs/usb/core/version/: ver_api_nb.h  ver_api_nb_oal_os.h  ver_oal.h  ver_oal_os.h  ver_psp.h  ver_psp_aligncheck.h  ver_psp_alloc.h  ver_psp_array.h  ver_psp_assert.h  ver_psp_endianness.h  ver_psp_idle.h  ver_psp_isr.h  ver_psp_proc_reg.h  ver_psp_rand.h  ver_psp_reg.h  ver_psp_rtc.h  ver_psp_stdio.h  ver_psp_string.h  ver_psp_sync_int.h  ver_psp_sync_tick.h  ver_psp_syserr.h  ver_psp_tick.h  ver_psp_types.h  ver_psp_usbd_synopsys_otg.h  ver_sync.h  ver_usbd.h  ver_usbd_cdcacm.h  ver_usbd_hid.h  ver_usbd_synopsys_otg.h
libs/watchdog/includes/: watchdog.h
(+95 files in other folders)
