ADD_SUBDIRECTORY(adc)
ADD_SUBDIRECTORY(aoad)
ADD_SUBDIRECTORY(app_entry)
ADD_SUBDIRECTORY(button_support)
ADD_SUBDIRECTORY(dma)
ADD_SUBDIRECTORY(em_core)
ADD_SUBDIRECTORY(em_hw_api)
ADD_SUBDIRECTORY(em_system)
ADD_SUBDIRECTORY(em_system_stack)
ADD_SUBDIRECTORY(firmware_header)
ADD_SUBDIRECTORY(firmware_update_core)
ADD_SUBDIRECTORY(firmware_update_crypto)
ADD_SUBDIRECTORY(firmware_update_spi)
ADD_SUBDIRECTORY(gpio)
ADD_SUBDIRECTORY(i2c)
ADD_SUBDIRECTORY(i2s)
ADD_SUBDIRECTORY(led_support)
ADD_SUBDIRECTORY(memory_manager)
ADD_SUBDIRECTORY(nvm)
ADD_SUBDIRECTORY(nvm_entry)
ADD_SUBDIRECTORY(nvm_info)
ADD_SUBDIRECTORY(nvm_operation_scheduler)
ADD_SUBDIRECTORY(pml)
ADD_SUBDIRECTORY(prot_timer)
ADD_SUBDIRECTORY(qdec)
ADD_SUBDIRECTORY(radio)
ADD_SUBDIRECTORY(rc_calib)
ADD_SUBDIRECTORY(rtc)
ADD_SUBDIRECTORY(security)
ADD_SUBDIRECTORY(sleep_manager)
ADD_SUBDIRECTORY(sleep_timer)
ADD_SUBDIRECTORY(spi_master)
ADD_SUBDIRECTORY(spi_slave)
ADD_SUBDIRECTORY(temperature_indicator)
ADD_SUBDIRECTORY(transport)
ADD_SUBDIRECTORY(uart)
ADD_SUBDIRECTORY(unitimer)
ADD_SUBDIRECTORY(usb/core)
ADD_SUBDIRECTORY(third_party/printf)
ADD_SUBDIRECTORY(third_party/QPC)
ADD_SUBDIRECTORY(third_party/Metaware)
ADD_SUBDIRECTORY(third_party/unit_test)
ADD_SUBDIRECTORY(third_party/emb)
ADD_SUBDIRECTORY(emb_vs/fwu/service)
ADD_SUBDIRECTORY(emb_vs/fwu/profile/target)
ADD_SUBDIRECTORY(emb_vs/emdt/service)
ADD_SUBDIRECTORY(emb_vs/emdt/profile/server)
ADD_SUBDIRECTORY(emb_vs/emdt/profile/client)
ADD_SUBDIRECTORY(emb_vs/rscps/profile/server)
ADD_SUBDIRECTORY(nvm_bootloader)
