ADD_LIBRARY(em_hw_api STATIC IMPORTED GLOBAL)
SET_TARGET_PROPERTIES(em_hw_api PROPERTIES
    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib_em_hw_api.a")

ADD_LIBRARY(em_hw_api_di03 STATIC IMPORTED GLOBAL)
SET_TARGET_PROPERTIES(em_hw_api_di03 PROPERTIES
    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib_em_hw_api_di03.a")

ADD_LIBRARY(em_hw_api_di04 STATIC IMPORTED GLOBAL)
SET_TARGET_PROPERTIES(em_hw_api_di04 PROPERTIES
    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib_em_hw_api_di04.a")

