ADD_LIBRARY(gpio STATIC IMPORTED GLOBAL)
SET_TARGET_PROPERTIES(gpio PROPERTIES
    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib_gpio.a")

ADD_LIBRARY(gpio_di03 STATIC IMPORTED GLOBAL)
SET_TARGET_PROPERTIES(gpio_di03 PROPERTIES
    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib_gpio_di03.a")

ADD_LIBRARY(gpio_di04 STATIC IMPORTED GLOBAL)
SET_TARGET_PROPERTIES(gpio_di04 PROPERTIES
    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib_gpio_di04.a")

