ADD_LIBRARY(nvm_bootloader_base_di03 STATIC IMPORTED GLOBAL)
SET_TARGET_PROPERTIES(nvm_bootloader_base_di03 PROPERTIES
    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib_nvm_bootloader_base_di03.a")

ADD_LIBRARY(nvm_bootloader_base_di04 STATIC IMPORTED GLOBAL)
SET_TARGET_PROPERTIES(nvm_bootloader_base_di04 PROPERTIES
    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib_nvm_bootloader_base_di04.a")

ADD_LIBRARY(nvm_bootloader_base_di05 STATIC IMPORTED GLOBAL)
SET_TARGET_PROPERTIES(nvm_bootloader_base_di05 PROPERTIES
    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib_nvm_bootloader_base_di05.a")

