ADD_LIBRARY(nvm_entry STATIC IMPORTED GLOBAL)
SET_TARGET_PROPERTIES(nvm_entry PROPERTIES
    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib_nvm_entry.a")

ADD_LIBRARY(nvm_entry_di03 STATIC IMPORTED GLOBAL)
SET_TARGET_PROPERTIES(nvm_entry_di03 PROPERTIES
    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib_nvm_entry_di03.a")

ADD_LIBRARY(nvm_entry_di04 STATIC IMPORTED GLOBAL)
SET_TARGET_PROPERTIES(nvm_entry_di04 PROPERTIES
    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib_nvm_entry_di04.a")

ADD_LIBRARY(nvm_entry_emcore STATIC IMPORTED GLOBAL)
SET_TARGET_PROPERTIES(nvm_entry_emcore PROPERTIES
    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib_nvm_entry_emcore.a")

ADD_LIBRARY(nvm_entry_emcore_di03 STATIC IMPORTED GLOBAL)
SET_TARGET_PROPERTIES(nvm_entry_emcore_di03 PROPERTIES
    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib_nvm_entry_emcore_di03.a")

ADD_LIBRARY(nvm_entry_emcore_di04 STATIC IMPORTED GLOBAL)
SET_TARGET_PROPERTIES(nvm_entry_emcore_di04 PROPERTIES
    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib_nvm_entry_emcore_di04.a")

