ADD_LIBRARY(hw_security STATIC IMPORTED GLOBAL)
SET_TARGET_PROPERTIES(hw_security PROPERTIES
    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib_hw_security.a")

ADD_LIBRARY(hw_security_di03 STATIC IMPORTED GLOBAL)
SET_TARGET_PROPERTIES(hw_security_di03 PROPERTIES
    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib_hw_security_di03.a")

ADD_LIBRARY(hw_security_di04 STATIC IMPORTED GLOBAL)
SET_TARGET_PROPERTIES(hw_security_di04 PROPERTIES
    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib_hw_security_di04.a")

