ADD_LIBRARY(spi_slave STATIC IMPORTED GLOBAL)
SET_TARGET_PROPERTIES(spi_slave PROPERTIES
    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib_spi_slave.a")

ADD_LIBRARY(spi_slave_dma STATIC IMPORTED GLOBAL)
SET_TARGET_PROPERTIES(spi_slave_dma PROPERTIES
    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib_spi_slave_dma.a")

