ADD_LIBRARY(uart STATIC IMPORTED GLOBAL)
SET_TARGET_PROPERTIES(uart PROPERTIES
    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib_uart.a")

ADD_LIBRARY(uart_dma STATIC IMPORTED GLOBAL)
SET_TARGET_PROPERTIES(uart_dma PROPERTIES
    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib_uart_dma.a")

