ADD_LIBRARY(usb_cdcacm STATIC IMPORTED GLOBAL)
SET_TARGET_PROPERTIES(usb_cdcacm PROPERTIES
    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib_usb_cdcacm.a")

ADD_LIBRARY(usb_keyboard STATIC IMPORTED GLOBAL)
SET_TARGET_PROPERTIES(usb_keyboard PROPERTIES
    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib_usb_keyboard.a")

ADD_LIBRARY(usb_mouse STATIC IMPORTED GLOBAL)
SET_TARGET_PROPERTIES(usb_mouse PROPERTIES
    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib_usb_mouse.a")

ADD_LIBRARY(usb_hidgeneric STATIC IMPORTED GLOBAL)
SET_TARGET_PROPERTIES(usb_hidgeneric PROPERTIES
    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib_usb_hidgeneric.a")

ADD_LIBRARY(usb_cdcacm_hid STATIC IMPORTED GLOBAL)
SET_TARGET_PROPERTIES(usb_cdcacm_hid PROPERTIES
    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib_usb_cdcacm_hid.a")

